scripts/nullaway/wpi/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8.txt
../wpi/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8/src/org/twentygototen/pipeline/Pipeline.java:106: error: [NullAway] returning @Nullable expression from method with @NonNull return type
                return null;
                ^
    (see http://t.uber.com/nullaway )
../wpi/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8/src/org/twentygototen/pipeline/Callbacks.java:60: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return result;
            ^
    (see http://t.uber.com/nullaway )
../wpi/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8/src/org/twentygototen/pipeline/pipes/SortPipe.java:15: error: [NullAway] assigning @Nullable expression to @NonNull field
        comp = null;
             ^
    (see http://t.uber.com/nullaway )
../wpi/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8/src/org/twentygototen/pipeline/sources/SourceWithPipe.java:36: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../wpi/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8/src/org/twentygototen/pipeline/sources/DirectoryList.java:19: error: [NullAway] assigning @Nullable expression to @NonNull field
        fileFilter = null;
                   ^
    (see http://t.uber.com/nullaway )
Note: ../wpi/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8/src/org/twentygototen/pipeline/Pipeline.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
5 errors
